ISSUE 58 - fix trademark text wrapping to next line

--- a/app/styles/badges/_badges.scss
+++ b/app/styles/badges/_badges.scss
@@ -3,7 +3,6 @@
 	margin-bottom: 24px;
 	padding: 30px;
 	display: block;
-	//height: 163px;
 	color: $black;
 	text-decoration: none;
 	width: 100%;
@@ -44,6 +43,10 @@
 		max-width: 100%;
 		text-align: center;
 		box-sizing: border-box;
+
+		&__wrapper {
+			white-space: nowrap;
+		}
 	}
 
 	&__header {
